[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamshatter"
version = "1.0.16"
dependencies = [
    "niquests>=3.15.2",
    "urllib3-future>=2.13.908",
]
description = "Multiplexed chunked file downloader"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Thomas Xin", email = "thomasxin@gmail.com" }]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
streamshatter = "streamshatter:main"